@@ -87,6 +87,7 @@ gerritclient =
     plugin_list=gerritclient.commands.plugin:PluginList
     plugin_reload=gerritclient.commands.plugin:PluginReload
     plugin_show=gerritclient.commands.plugin:PluginShow
+    project_branch_list=gerritclient.commands.project:ProjectBranchList
     project_create=gerritclient.commands.project:ProjectCreate
     project_delete=gerritclient.commands.project:ProjectDelete
     project_description_set=gerritclient.commands.project:ProjectDescriptionSet
